--- a/module2/week4/demoauth/package.json
+++ b/module2/week4/demoauth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "signupcomplete",
+  "name": "demoauth",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
